<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="app_name">Weee!</string>
    <string name="at">at</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="check_out_this_deal">Check out this deal from @getweee!</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_deal_link">Copy Deal Link</string>
    <string name="copy_forum_embed_code">Copy Forum Embed Code</string>
    <string name="copy_to_clipboard">Copied to Clipboard</string>
    <string name="create_weee_note_hint">Optional detail of this deal, such as price, validity period, etc</string>
    <string name="deals">DEALS</string>
    <string name="deals_i_liked">Deals I Liked or Commented</string>
    <string name="define_FloatingActionButton" />
    <string name="delete_comment">Delete Comment?</string>
    <string name="delete_deal">Delete</string>
    <string name="delete_deal_error">Delete deal error</string>
    <string name="direction">Directions</string>
    <string name="done">Done</string>
    <string name="drawer_closed" />
    <string name="drawer_open" />
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="facebook_app_id">323749321154710</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="google_maps_key">AIzaSyBgpAkeHclW13B_TlEw3i-_RQ5juLIGTGQ</string>
    <string name="google_maps_key_instructions" />
    <string name="has_new_comment">has new comment</string>
    <string name="has_new_deal">has new deal</string>
    <string name="has_new_like">has new like</string>
    <string name="library_FloatingActionButton_author">Oleksandr Melnykov</string>
    <string name="library_FloatingActionButton_authorWebsite">https://github.com/makovkastar/FloatingActionButton</string>
    <string name="library_FloatingActionButton_isOpenSource">true</string>
    <string name="library_FloatingActionButton_libraryDescription">Android Google+ like floating action button which reacts on the list view scrolling events. Becomes visible when the list view is scrolled up and invisible when scrolled down.</string>
    <string name="library_FloatingActionButton_libraryName">FloatingActionButton</string>
    <string name="library_FloatingActionButton_libraryVersion">1.0.0</string>
    <string name="library_FloatingActionButton_libraryWebsite">https://github.com/makovkastar/FloatingActionButton</string>
    <string name="library_FloatingActionButton_licenseId">mit</string>
    <string name="library_FloatingActionButton_repositoryLink">https://github.com/makovkastar/FloatingActionButton</string>
    <string name="load_more_deals">Load more deals</string>
    <string name="log_in">Log In</string>
    <string name="manage">Manage</string>
    <string name="my_deals">My Deals</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="notification">Notification</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="open_in_google_map">Open in Google Maps</string>
    <string name="password">Password</string>
    <string name="profile_current_pw">Current Password</string>
    <string name="profile_forget_password">Forgot your Password?</string>
    <string name="profile_name">Name</string>
    <string name="profile_new_pw">New Password</string>
    <string name="profile_photo">Photo</string>
    <string name="profile_verify_pw">Verify password</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="replies">REPLIES</string>
    <string name="report_expire">Report Expire</string>
    <string name="report_spam">Report Spam</string>
    <string name="save">Save</string>
    <string name="save_deal">Save to Phone</string>
    <string name="save_deal_at">Save deal at</string>
    <string name="save_deal_complete">Save deal complete</string>
    <string name="save_deal_fail">Save deal fail</string>
    <string name="save_image_at">Save image at</string>
    <string name="save_image_complete">Save image complete</string>
    <string name="save_image_fail">Save image fail</string>
    <string name="search_hint">Search location</string>
    <string name="search_label">Weee</string>
    <string name="search_venue">Search location by keyword</string>
    <string name="searching_store">Searching stores</string>
    <string name="select_distance_unit_title">Select distance unit</string>
    <string name="select_from_gallary">Select From Gallery</string>
    <string name="send">Send</string>
    <string name="share_deal">Share deal</string>
    <string name="sign_up">Sign Up</string>
    <string name="store_i_followed">The store I followed</string>
    <string name="take_picture">Take Picture</string>
    <string name="title_change_password">CHANGE PASSWORD</string>
    <string name="title_deal_detail">DEAL DETAIL</string>
    <string name="title_deals">DEALS</string>
    <string name="title_slogan">SHARE &amp; DISCOVER BEST SHOPPING DEALS</string>
    <string name="user_imperial_units">Distance Unit</string>
    <string name="user_name">User name</string>
</resources>