<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:weee="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/menu_report_expire" android:title="@string/report_expire" weee:showAsAction="never" />
    <item android:id="@id/menu_report_spam" android:title="@string/report_spam" weee:showAsAction="never" />
    <item android:id="@id/menu_save_deal" android:title="@string/save_deal" weee:showAsAction="never" />
    <item android:id="@id/menu_copy_deal_link" android:title="@string/copy_deal_link" weee:showAsAction="never" />
    <item android:id="@id/menu_open_in_browser" android:title="@string/open_in_browser" weee:showAsAction="never" />
    <item android:id="@id/menu_copy_forum_embed_link" android:title="@string/copy_forum_embed_code" weee:showAsAction="never" />
    <item android:id="@id/menu_action_delete" android:title="@string/delete_deal" weee:showAsAction="never" />
    <item android:icon="@drawable/ic_share_white" android:id="@id/menu_action_share" android:title="@string/share_deal" weee:showAsAction="always" />
</menu>