<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/linearLayout_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="24.0dip" />
    <EditText android:layout_gravity="left" android:id="@id/setting_currentpassword" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:hint="@string/profile_current_pw" android:inputType="textPassword" />
    <TextView android:textSize="16.0sp" android:textColor="#ff79a93f" android:layout_gravity="right" android:id="@id/txt_forget_password" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="24.0dip" android:text="@string/profile_forget_password" />
    <EditText android:layout_gravity="left" android:id="@id/setting_newpassword" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:hint="@string/profile_new_pw" android:singleLine="true" android:inputType="textPassword" />
    <EditText android:layout_gravity="left" android:id="@id/setting_verifypassword" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:hint="@string/profile_verify_pw" android:singleLine="true" android:inputType="textPassword" />
</LinearLayout>