<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_notification_enable" />
            <Switch android:textColor="#ff2f93a9" android:layout_gravity="center_vertical" android:id="@id/switch_enable_notify" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:checked="true" android:text="@string/enable_notification" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:padding="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="8.0dip" android:text="@string/store_i_followed" />
            <View android:background="#ffcccccc" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <Switch android:textColor="#ff000000" android:layout_gravity="center_vertical" android:id="@id/switch_notification_followstore_add_deal" android:padding="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="16.0dip" android:checked="true" android:text="@string/has_new_deal" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <ImageView android:layout_gravity="left|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_notification_mydeals" />
            <TextView android:textColor="#ff2f93a9" android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/my_deals" />
        </LinearLayout>
        <View android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="4.0dip" />
        <Switch android:textColor="#ff999999" android:layout_gravity="center_vertical" android:id="@id/switch_notification_posted_deal_comment" android:layout_width="fill_parent" android:layout_height="48.0dip" android:checked="true" android:text="@string/has_new_comment" />
        <View android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <Switch android:textColor="#ff999999" android:layout_gravity="center_vertical" android:id="@id/switch_notification_posted_deal_liked" android:layout_width="fill_parent" android:layout_height="48.0dip" android:checked="true" android:text="@string/has_new_like" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <ImageView android:layout_gravity="left|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_notification_liked_commented" />
            <TextView android:textColor="#ff2f93a9" android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/deals_i_liked" />
        </LinearLayout>
        <View android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="4.0dip" />
        <Switch android:textColor="#ff999999" android:layout_gravity="center_vertical" android:id="@id/switch_notification_touched_deal_comment" android:layout_width="fill_parent" android:layout_height="48.0dip" android:checked="true" android:text="@string/has_new_comment" />
        <View android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <Switch android:textColor="#ff999999" android:layout_gravity="center_vertical" android:id="@id/switch_notification_touched_deal_liked" android:layout_width="fill_parent" android:layout_height="48.0dip" android:checked="true" android:text="@string/has_new_like" />
    </LinearLayout>
</ScrollView>