<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/linearLayout_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff5b5b5b" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:text="@string/profile_photo" android:layout_weight="1.0" />
        <weee.com.getweee.ui.TintableButton android:layout_gravity="center_vertical" android:id="@id/account_avatar" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="4.0dip" android:scaleType="centerCrop" />
        <ImageView android:layout_gravity="center_vertical" android:background="@drawable/arrow_right" android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" />
    </LinearLayout>
    <View android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="8.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/button_name_setting" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff5b5b5b" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:text="@string/profile_name" />
        <EditText android:id="@id/edit_account_name" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:hint="@string/name" android:singleLine="true" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="8.0dip" />
    <TextView android:textSize="16.0sp" android:textColor="#ff5b5b5b" android:gravity="center_vertical" android:id="@id/txt_change_unit" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="24.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="24.0dip" android:text="@string/user_imperial_units" />
    <View android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="8.0dip" />
</LinearLayout>