<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/login_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:focusable="true" android:focusableInTouchMode="true" android:layout_width="1.0dip" android:layout_height="1.0dip" />
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/img_bg_weee" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:src="@drawable/logo_for_login" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <TextView android:textSize="@dimen/slogan_text_size" android:textColor="#fff7f7f7" android:id="@id/txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/title_slogan" android:layout_below="@id/img_bg_weee" android:layout_centerHorizontal="true" />
        <ImageView android:id="@id/bg_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:src="@drawable/bg_email" android:layout_below="@id/txt" android:layout_centerHorizontal="true" />
        <weee.com.getweee.ui.AutoComplete android:textSize="18.0sp" android:textColor="#fff0edee" android:textColorHint="#fff0edee" android:id="@id/edt_email" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_login_text_editor_margin_left" android:layout_marginBottom="12.0dip" android:hint="@string/email" android:ems="10" android:singleLine="true" android:layout_alignBottom="@id/bg_email" android:inputType="textEmailAddress" />
        <ImageView android:id="@id/bg_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="9.0dip" android:src="@drawable/bg_username" android:layout_below="@id/bg_email" android:layout_centerHorizontal="true" />
        <EditText android:textSize="18.0sp" android:textColor="#fff0edee" android:textColorHint="#fff0edee" android:id="@id/edt_username" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_login_text_editor_margin_left" android:layout_marginBottom="12.0dip" android:hint="@string/user_name" android:ems="10" android:singleLine="true" android:layout_alignBottom="@id/bg_username" android:inputType="textNoSuggestions" />
        <ImageView android:id="@id/bg_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="9.0dip" android:src="@drawable/bg_password" android:layout_below="@id/bg_username" android:layout_centerHorizontal="true" />
        <EditText android:textSize="18.0sp" android:textColor="#fff0edee" android:textColorHint="#fff0edee" android:id="@id/edt_password" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_login_text_editor_margin_left" android:layout_marginBottom="12.0dip" android:hint="@string/password" android:ems="10" android:singleLine="true" android:layout_alignBottom="@id/bg_password" android:inputType="textPassword" />
        <Button android:textStyle="bold" android:textColor="#fff0edee" android:id="@id/btn_signup" android:background="@drawable/btn_round_corner" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginTop="10.0dip" android:text="@string/sign_up" android:layout_below="@id/bg_password" android:layout_alignLeft="@id/bg_email" android:layout_alignRight="@id/bg_email" android:layout_alignStart="@2131296405" />
    </RelativeLayout>
</ScrollView>